--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "react": "^15.1.0",
-    "react-native": "0.27.2"
+    "react-native": "0.27.2",
+    "react-native-swiper": "^1.4.7"
   }
 }
